--- a/AutocompleteTutorial/packages.config
+++ b/AutocompleteTutorial/packages.config
@@ -15,10 +15,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search" version="5.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search.Common" version="5.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search.Data" version="5.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search.Service" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search" version="6.0.0-preview" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Common" version="6.0.0-preview" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Data" version="6.0.0-preview" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Service" version="6.0.0-preview" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
